# next-coder

./: .gitignore  LICENSE  README-zh-CN.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/nextcli/: __init__.py  __main__.py  cli.py  config.py
src/nextcli/agent/: events.py  loop.py  prompts.py
src/nextcli/llm/: __init__.py  anthropic_provider.py  cache.py  custom_provider.py  mock_provider.py  openai_provider.py  provider.py
src/nextcli/orchestrator/: __init__.py  planner.py  runner.py
src/nextcli/tools/: __init__.py  base.py  edit.py  glob.py  grep.py  read.py  shell.py  spawn_agent.py  tool_cache.py  write.py
src/nextcli/tui/: __init__.py  agent_detail.py  app.py  command_palette.py  onboarding.py  panes.py  resume_screen.py  session_save.py  session_viewer.py  styles.tcss  widgets.py
src/nextcli/util/: log.py  paths.py
tests/: test_app_smoke.py  test_mock_provider.py  test_onboarding.py  test_orchestrator.py  test_spawn_agent.py  test_tools.py
tests/fixtures/: __init__.py  canned_llm_responses.py
tests/fixtures/sample_repo/: example.py  test_example.py
